--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.euj.wargaming">
+    package="com.example.euj.wargaming" >
 
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.example.euj.wargaming.utils.Myapp"
+        android:name=".utils.Myapp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MyMaterialTheme">
+        android:theme="@style/MyMaterialTheme" >
         <activity
             android:name=".Avtivity.worldoftanks"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Avtivity.MainActivity"/>
-        <activity android:name=".Avtivity.worldoftanksassistant"/>
-
+        <activity android:name=".Avtivity.MainActivity" />
+        <activity android:name=".Avtivity.worldoftanksassistant" />
+        <activity
+            android:name=".Avtivity.AllStatistiques"
+            android:label="@string/title_activity_all_statistiques" >
+        </activity>
     </application>
 
 </manifest>
